# paperlens

./: .dockerignore  .env.example  .gitignore  Dockerfile.public  README.md  pyproject.toml  railway.toml  requirements-public.txt  requirements.txt
backend/app/: cors.py  main.py  paper_schemas.py  public_limits.py  public_main.py  public_routes.py
catalog/: __init__.py  citations.py  paths.py  store.py
data/examples/: malcolm_baldwin_excerpt.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: config.js
frontend/src/: App.tsx  PublicApp.tsx  api.ts  apiBase.ts  brand.ts  catalogApi.ts  index.css  main.tsx  paperApi.ts  paperColors.ts  paperSelection.ts  paperTypes.ts  publicApi.ts  sample.ts  types.ts  vite-env.d.ts
paperlens/: __init__.py  annotate.py  arxiv.py  cli.py  export.py  library.py  models.py  paths.py  resolve.py  sections.py  session.py  storage.py  vision.py
paperlens/chunking/: structure.py
paperlens/corpora/: __init__.py  real_world_learning.py
paperlens/parse/: crop.py  figures.py  pdf_blocks.py  render.py
scripts/: start-public.sh  sync-portfolio-paperlens.sh
serving/: README.md
serving/portfolio/: config.local.js.example
speechlens/: __init__.py  annotator.py  cli.py  config.py  library.py  llm.py  models.py  paths.py  sample_data.py
tests/: test_export.py  test_library.py  test_paper_blocks.py  test_paper_sections.py  test_public_limits.py  test_query_and_sources.py  test_segmentation_and_spans.py  test_speech_splitter.py  test_transcript_parser.py
(+31 files in other folders)
