[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speechlens"
version = "0.1.0"
description = "Source-grounded agentic annotation for historical speeches"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "openai>=1.55.0",
    "httpx>=0.28.0",
    "trafilatura>=2.0.0",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.12",
    "typer>=0.14.0",
    "rich>=13.9.0",
    "docling>=2.0",
    "duckduckgo-search>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
retrieval = [
    "tavily-python>=0.5.0",
]

[project.scripts]
speechlens = "speechlens.cli:app"
paperlens = "paperlens.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["speechlens", "paperlens", "catalog"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
